Cross-platform processor core counter: fix build on FreeBSD. https://bugs.webkit.org/show_bug.cgi?id=81482

Reviewed by Zoltan Herczeg.

The documentation of sysctl(3) shows that <sys/types.h> should be
included before <sys/sysctl.h> (sys/types.h tends to be the first
included header in general).

This should fix the build on FreeBSD and other systems where
sysctl.h really depends on types defined in types.h.

* wtf/NumberOfCores.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@111195 bbb929c8-8fbe-4397-9dbb-9b2b20218538